--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
-Date: 2020-06-11
+Date: TBA
 
   Changes:
     - Updated to 0.18
+    - Complete rewrite keeping the same behaviour.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
