--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
-Date: TBA
+Date: 2020-06-20
 
   Changes:
     - Updated to 0.18
